versioned_docs/version-6.0/client-api/operations/maintenance/indexes/put-indexes.mdx
---
title: "Put Indexes Operation"
hide_table_of_contents: true
sidebar_label: Put Indexes
sidebar_position: 0
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java", "python", "php", "nodejs"];


# Put Indexes Operation
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="">

* There are a few ways to create and deploy indexes in a database.  

* This page describes deploying a **static-index** using the `PutIndexesOperation` Operation.  
  For a general description of Operations see [what are operations](../../../../client-api/operations/what-are-operations.mdx).  

* In this page:
    * [Ways to deploy indexes - short summary](../../../../client-api/operations/maintenance/indexes/put-indexes.mdx#ways-to-deploy-indexes---short-summary)
    * [Put indexes operation with IndexDefinition](../../../../client-api/operations/maintenance/indexes/put-indexes.mdx#put-indexes-operation-with-indexdefinition)
    * [Put indexes operation with IndexDefinitionBuilder](../../../../client-api/operations/maintenance/indexes/put-indexes.mdx#put-indexes-operation-with-indexdefinitionbuilder)
    * [Syntax](../../../../client-api/operations/maintenance/indexes/put-indexes.mdx#syntax)

</Admonition>
## Ways to deploy indexes - short summary 

<Admonition type="note" title="">

##### Static-indexes:

There are a few ways to deploy a static-index from the Client API:  

* The following methods are explained in section [Deploy a static-index](../../../../indexes/creating-and-deploying.mdx#deploy-a-static-index):
  * Call `Execute()` on a specific index instance.
  * Call `ExecuteIndex()` or `ExecuteIndexes()` on your _DocumentStore_ object.
  * Call `IndexCreation.CreateIndexes()`.

* Alternatively, you can execute the `PutIndexesOperation` maintenance operation on the _DocumentStore_, **as explained below**.

</Admonition>
<Admonition type="note" title="">

##### Auto-indexes:

  * An auto-index is created by the server when making a filtering query that doesn't specify which index to use.
    Learn more in [Creating auto indexes](../../../../indexes/creating-and-deploying.mdx#auto-indexes).

</Admonition>


## Put indexes operation with IndexDefinition 

Using `PutIndexesOperation` with **IndexDefinition** allows you to:

  * Choose any name for the index.  
    This string-based name is specified when querying the index.
  * Set low-level properties available in _IndexDefinition_.

<Tabs groupId='languageSyntax'>
<TabItem value="LINQ-index-Sync" label="LINQ-index-Sync">
<CodeBlock language="csharp">
{`// Create an index definition
var indexDefinition = new IndexDefinition 
{
    // Name is mandatory, can use any string
    Name = "OrdersByTotal",

    // Define the index Map functions, string format
    // A single string for a map-index, multiple strings for a multi-map-index
    Maps = new HashSet<string>
    {
        @"
          // Define the collection that will be indexed:
          from order in docs.Orders

            // Define the index-entry:
            select new 
            {
                // Define the index-fields within each index-entry:
                Employee = order.Employee,
                Company = order.Company,
                Total = order.Lines.Sum(l => (l.Quantity * l.PricePerUnit) * (1 - l.Discount))
            }"
    },
    
    // Reduce = ...,
    
    // Can provide other index definitions available on the IndexDefinition class
    // Override the default values, e.g.:
    DeploymentMode = IndexDeploymentMode.Rolling,
    Priority = IndexPriority.High,
    Configuration = new IndexConfiguration
    {
        { "Indexing.IndexMissingFieldsAsNull", "true" }
    }
    // See all available properties in syntax below
};

// Define the put indexes operation, pass the index definition
// Note: multiple index definitions can be passed, see syntax below
IMaintenanceOperation<PutIndexResult[]> putIndexesOp = new PutIndexesOperation(indexDefinition);

// Execute the operation by passing it to Maintenance.Send
store.Maintenance.Send(putIndexesOp);
`}
</CodeBlock>
</TabItem>
<TabItem value="LINQ-index-Async" label="LINQ-index-Async">
<CodeBlock language="csharp">
{`// Create an index definition
var indexDefinition = new IndexDefinition
{
    // Name is mandatory, can use any string
    Name = "OrdersByTotal",
    
    // Define the index Map functions, string format
    // A single string for a map-index, multiple strings for a multi-map-index
    Maps = new HashSet<string>
    {
        @"
          // Define the collection that will be indexed:
          from order in docs.Orders

            // Define the index-entry:
            select new 
            {
                // Define the index-fields within each index-entry:
                Employee = order.Employee,
                Company = order.Company,
                Total = order.Lines.Sum(l => (l.Quantity * l.PricePerUnit) * (1 - l.Discount))
            }"
    },

    // Reduce = ...,
   
    // Can provide other index definitions available on the IndexDefinition class
    // Override the default values, e.g.:
    DeploymentMode = IndexDeploymentMode.Rolling,
    Priority = IndexPriority.High,
    Configuration = new IndexConfiguration
    {
        { "Indexing.IndexMissingFieldsAsNull", "true" }
    }
    // See all available properties in syntax below
};

// Define the put indexes operation, pass the index definition
// Note: multiple index definitions can be passed, see syntax below
IMaintenanceOperation<PutIndexResult[]> putIndexesOp = new PutIndexesOperation(indexDefinition);

// Execute the operation by passing it to Maintenance.SendAsync
await store.Maintenance.SendAsync(putIndexesOp);
`}
</CodeBlock>
</TabItem>
<TabItem value="JavaScript-index" label="JavaScript-index">
<CodeBlock language="csharp">
{`// Create an index definition
var indexDefinition = new IndexDefinition
{
    // Name is mandatory, can use any string
    Name = "OrdersByTotal",
    
    // Define the index Map functions, string format
    // A single string for a map-index, multiple strings for a multi-map-index
    Maps = new HashSet<string>
    {
        @"map('Orders', function(order) {
              return {
                  Employee: order.Employee,
                  Company: order.Company,
                  Total: order.Lines.reduce(function(sum, l) {
                      return sum + (l.Quantity * l.PricePerUnit) * (1 - l.Discount);
                  }, 0)
              };
        });"
    },
    
    // Reduce = ...,
   
    // Can provide other index definitions available on the IndexDefinition class
    // Override the default values, e.g.:
    DeploymentMode = IndexDeploymentMode.Rolling,
    Priority = IndexPriority.High,
    Configuration = new IndexConfiguration
    {
        { "Indexing.IndexMissingFieldsAsNull", "true" }
    }
    // See all available properties in syntax below
};

// Define the put indexes operation, pass the index definition
// Note: multiple index definitions can be passed, see syntax below
IMaintenanceOperation<PutIndexResult[]> putIndexesOp = new PutIndexesOperation(indexDefinition);

// Execute the operation by passing it to Maintenance.Send
store.Maintenance.Send(putIndexesOp);
`}
</CodeBlock>
</TabItem>
</Tabs>



## Put indexes operation with IndexDefinitionBuilder 

Using `PutIndexesOperation` with an IndexDefinition created from an **IndexDefinitionBuilder** allows:  

  * Creating an index definition using a strongly typed LINQ syntax.  
  * Setting low-level properties available in _IndexDefinitionBuilder_.
  * Note:  
    Only map or map-reduce indexes can be generated by the _IndexDefinitionBuilder_.  
    To generate multi-map indexes use the above _IndexDefinition_ option. 

<Tabs groupId='languageSyntax'>
<TabItem value="Sync" label="Sync">
<CodeBlock language="csharp">
{`// Create an index definition builder
var builder = new IndexDefinitionBuilder<Order>
{
    // Define the map function, strongly typed LINQ format
    Map =
        // Define the collection that will be indexed:
        orders => from order in orders
            // Define the index-entry:
            select new
            {
                // Define the index-fields within each index-entry:
                Employee = order.Employee,
                Company = order.Company,
                Total = order.Lines.Sum(l => (l.Quantity * l.PricePerUnit) * (1 - l.Discount))
            },
    
    // Can provide other properties available on the IndexDefinitionBuilder class, e.g.:
    DeploymentMode = IndexDeploymentMode.Rolling,
    Priority = IndexPriority.High,
    // Reduce = ..., etc.
};

// Generate index definition from builder
// Pass the conventions, needed for building the Maps property
var indexDefinition = builder.ToIndexDefinition(store.Conventions);

// Optionally, set the index name, can use any string
// If not provided then default name from builder is used, e.g.: "IndexDefinitionBuildersOfOrders"
indexDefinition.Name = "OrdersByTotal";

// Define the put indexes operation, pass the index definition
// Note: multiple index definitions can be passed, see syntax below
IMaintenanceOperation<PutIndexResult[]> putIndexesOp = new PutIndexesOperation(indexDefinition);

// Execute the operation by passing it to Maintenance.Send
store.Maintenance.Send(putIndexesOp);
`}
</CodeBlock>
</TabItem>
<TabItem value="Async" label="Async">
<CodeBlock language="csharp">
{`// Create an index definition builder
var builder = new IndexDefinitionBuilder<Order>
{
    // Define the map function, strongly typed LINQ format
    Map = 
        // Define the collection that will be indexed:
        orders => from order in orders
            // Define the index-entry:
            select new
            {
                // Define the index-fields within each index-entry:
                Employee = order.Employee,
                Company = order.Company,
                Total = order.Lines.Sum(l => (l.Quantity * l.PricePerUnit) * (1 - l.Discount))
            },
    
    // Can provide other properties available on the IndexDefinitionBuilder class, e.g.:
    DeploymentMode = IndexDeploymentMode.Rolling,
    Priority = IndexPriority.High,
    // Reduce = ..., etc.
};

// Generate index definition from builder
// Pass the conventions, needed for building the Maps property
var indexDefinition = builder.ToIndexDefinition(store.Conventions);

// Optionally, set the index name, can use any string
// If not provided then default name from builder is used, e.g.: "IndexDefinitionBuildersOfOrders"
indexDefinition.Name = "OrdersByTotal";

// Define the put indexes operation, pass the index definition
// Note: multiple index definitions can be passed, see syntax below
IMaintenanceOperation<PutIndexResult[]> putIndexesOp = new PutIndexesOperation(indexDefinition);

// Execute the operation by passing it to Maintenance.SendAsync
await store.Maintenance.SendAsync(putIndexesOp);
`}
</CodeBlock>
</TabItem>
</Tabs>



## Syntax 

<TabItem value="syntax" label="syntax">
<CodeBlock language="csharp">
{`public PutIndexesOperation(params IndexDefinition[] indexesToAdd)
`}
</CodeBlock>
</TabItem>

| Parameter        | Type                       | Description                      |
|------------------|----------------------------|----------------------------------|
| **indexesToAdd** | `params IndexDefinition[]` | Definitions of indexes to deploy |

<a id="indexDefinition"/>

| `IndexDefinition` parameter                  | Type                                    | Description                                                                                                               |
|----------------------------------------------|-----------------------------------------|---------------------------------------------------------------------------------------------------------------------------|
| Name                                         | `string`                                | Name of the index, a unique identifier                                                                                    |
| Maps                                         | `HashSet<string>`                       | All the map functions for the index                                                                                       |
| Reduce                                       | `string`                                | The index reduce function                                                                                                 |
| DeploymentMode                               | `IndexDeploymentMode?`                  | Deployment mode<br/>(Parallel, Rolling)                                                                                    |
| State                                        | `IndexState?`                           | State of index<br/>(Normal, Disabled, Idle, Error)                                                                         |
| Priority                                     | `IndexPriority?`                        | Priority of index<br/>(Low, Normal, High)                                                                                  |
| LockMode                                     | `IndexLockMode?`                        | Lock mode of index<br/>(Unlock, LockedIgnore, LockedError)                                                                 |
| Fields                                       | `Dictionary<string, IndexFieldOptions>` | _IndexFieldOptions_ per index field                                                                                       |
| AdditionalSources                            | `Dictionary<string, string>`            | Additional code files to be compiled with this index                                                                      |
| AdditionalAssemblies                         | `HashSet<AdditionalAssembly>`           | Additional assemblies that are referenced                                                                                 |
| Configuration                                | `IndexConfiguration`                    | Can override [indexing configuration](../../../../server/configuration/indexing-configuration.mdx) by setting this dictionary |
| OutputReduceToCollection                     | `string`                                | A collection name for saving the reduce results as documents                                                              |
| ReduceOutputIndex                            | `long?`                                 | This number will be part of the reduce results documents IDs                                                              |
| PatternForOutputReduceToCollectionReferences | `string`                                | Pattern for documents IDs which reference IDs of reduce results documents                                                 |
| PatternReferencesCollectionName              | `string`                                | A collection name for the reference documents created based on provided pattern                                           |

| `store.Maintenance.Send(putIndexesOp)` return value   | Description                        |
|-------------------------------------------------------|------------------------------------|
| `PutIndexResult[]`                                    | List of _PutIndexResult_ per index |

| `PutIndexResult` parameter  | Type     | Description                             |
|-----------------------------|----------|-----------------------------------------|
| Index                       | `string` | Name of the index that was added        |
| RaftCommandIndex            | `long`   | Index of raft command that was executed |




</LanguageContent>
<LanguageContent language="java">


**PutIndexesOperation** is used to insert indexes into a database.

### Syntax

<TabItem value="put_1_0" label="put_1_0">
<CodeBlock language="java">
{`PutIndexesOperation(IndexDefinition... indexToAdd)
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **indexToAdd** | `IndexDefinition...` | Definitions of indexes |

| Return Value | |
| ------------- | ----- |
| PutIndexResult[] | List of created indexes |

### Example I

<TabItem value="put_1_1" label="put_1_1">
<CodeBlock language="java">
{`IndexDefinition indexDefinition = new IndexDefinition();
indexDefinition.setMaps(Collections.singleton("from order in docs.Orders select new \{ " +
    "   order.Employee," +
    "   order.Company," +
    "   Total = order.Lines.Sum(l => (l.Quantity * l.PricePerUnit) * (1 - l.Discount))" +
    "\}"));

store.maintenance().send(new PutIndexesOperation(indexDefinition));
`}
</CodeBlock>
</TabItem>

### Example II

<TabItem value="put_1_2" label="put_1_2">
<CodeBlock language="java">
{`IndexDefinitionBuilder builder = new IndexDefinitionBuilder();
builder.setMap("from order in docs.Orders select new \{ " +
    "   order.Employee," +
    "   order.Company," +
    "   Total = order.Lines.Sum(l => (l.Quantity * l.PricePerUnit) * (1 - l.Discount))" +
    "\}");

IndexDefinition definition = builder.toIndexDefinition(store.getConventions());
store.maintenance()
    .send(new PutIndexesOperation(definition));
`}
</CodeBlock>
</TabItem>


</LanguageContent>
<LanguageContent language="python">

<Admonition type="note" title="">

* There are a few ways to create and deploy indexes in a database.  

* This page describes deploying a **static-index** using the `PutIndexesOperation` Operation.  
  For a general description of Operations see [what are operations](../../../../client-api/operations/what-are-operations.mdx).  

* In this page:
    * [Ways to deploy indexes - short summary](../../../../client-api/operations/maintenance/indexes/put-indexes.mdx#ways-to-deploy-indexes---short-summary)
    * [Put indexes operation with IndexDefinition](../../../../client-api/operations/maintenance/indexes/put-indexes.mdx#put-indexes-operation-with-indexdefinition)
    * [Put indexes operation with IndexDefinitionBuilder](../../../../client-api/operations/maintenance/indexes/put-indexes.mdx#put-indexes-operation-with-indexdefinitionbuilder)
    * [Syntax](../../../../client-api/operations/maintenance/indexes/put-indexes.mdx#syntax)

</Admonition>
## Ways to deploy indexes - short summary 

#### Static index:

There are a few ways to deploy a static-index from the Client API:  

  * Call `execute()` on a specific index instance
  * Call `IndexCreation.create_indexes()` to deploy multiple indexes
  * Execute `PutIndexesOperation` maintenance operation on the Document Store - see below
  * Learn more in [static indexes](../../../../indexes/creating-and-deploying.mdx#static-indexes)

#### Auto index:  

  * An auto-index is created by the server when making a filtering query that doesn't specify which index to use
  * Learn more in [auto indexes](../../../../indexes/creating-and-deploying.mdx#auto-indexes)



## Put indexes operation with IndexDefinition 

Using `PutIndexesOperation` with **IndexDefinition** allows the following:  

  * Choosing any name for the index.
  * Setting low-level properties available in _IndexDefinition_.

<Tabs groupId='languageSyntax'>
<TabItem value="Index" label="Index">
<CodeBlock language="python">
{`# Create an index definition
index_definition = IndexDefinition(
    # Name is mandatory, can use any string
    name="OrdersByTotal",
    # Define the index Map functions, string format
    # A single string for a map-index, multiple strings for a multi-map-index
    maps={
        """
          // Define the collection that will be indexed:
          from order in docs.Orders

            // Define the index-entry:
            select new 
            {
                // Define the index-fields within each index-entry:
                Employee = order.Employee,
                Company = order.Company,
                Total = order.Lines.Sum(l => (l.Quantity * l.PricePerUnit) * (1 - l.Discount))
            }          
    """
    },
    # reduce = ...
    # Can provide other index definitions available on the IndexDefinition class
    # Override the default values, e.g.:
    deployment_mode=IndexDeploymentMode.ROLLING,
    priority=IndexPriority.HIGH,
    configuration={"Indexing.IndexMissingFieldsAsNull": "true"},
    # See all available properties in syntax below
)

# Define the put indexes operation, pass the index definition
# Note: multiple index definitions can be passed, see syntax below
put_indexes_op = PutIndexesOperation(index_definition)

# Execute the operation by passing it to maintenance.send
store.maintenance.send(put_indexes_op)
`}
</CodeBlock>
</TabItem>
<TabItem value="JavaScript-index" label="JavaScript-index">
<CodeBlock language="python">
{`# Create an index definition
index_definition = IndexDefinition(
    # Name is mandatory, can use any string
    name="OrdersByTotal",
    # Define the index map functions, string format
    # A single string for a map-index, multiple strings for a multimap index
    maps={
        """
        map('Orders', function(order) {
                  return {
                      Employee: order.Employee,
                      Company: order.Company,
                      Total: order.Lines.reduce(function(sum, l) {
                          return sum + (l.Quantity * l.PricePerUnit) * (1 - l.Discount);
                      }, 0)
                  };
            });
        """
    },
    # reduce = ...,
    # Can provide other index definitions available on the IndexDefinition class
    # Override the default values, e.g.:
    deployment_mode=IndexDeploymentMode.ROLLING,
    priority=IndexPriority.HIGH,
    configuration={"Indexing.IndexMissingFieldsAsNull": "true"},
    # See all available properties in syntax below
)
# Define the put indexes operation, pass the index definition
# Note: multiple index definitions can be passed, see syntax below
put_indexes_op = PutIndexesOperation(index_definition)

# Execute the operation by passing it to Maintenance.Send
store.maintenance.send(put_indexes_op)
`}
</CodeBlock>
</TabItem>
</Tabs>



## Put indexes operation with IndexDefinitionBuilder 

* Using `PutIndexesOperation` with an IndexDefinition created from an **IndexDefinitionBuilder** 
  allows setting low-level properties available in _IndexDefinitionBuilder_.  

* Note that only map or map-reduce indexes can be generated by the _IndexDefinitionBuilder_.  
  To generate multi-map indexes, use the above _IndexDefinition_ option. 

<TabItem value="put_2" label="put_2">
<CodeBlock language="python">
{`# Create an index definition builder
builder = IndexDefinitionBuilder()
builder.map = """
          // Define the collection that will be indexed:
          from order in docs.Orders

            // Define the index-entry:
            select new 
            \{
                // Define the index-fields within each index-entry:
                Employee = order.Employee,
                Company = order.Company,
                Total = order.Lines.Sum(l => (l.Quantity * l.PricePerUnit) * (1 - l.Discount))
            \}               
        """
# Can provide other properties available on the IndexDefinitionBuilder class, e.g.:
builder.deployment_mode = IndexDeploymentMode.ROLLING
builder.priority = IndexPriority.HIGH
# builder.reduce = ..., etc.

# Generate index definition from builder
# Pass the conventions, needed for building the maps property
builder.to_index_definition(store.conventions)

# Optionally, set the index name, can use any string
# If not provided then default name from builder is used, e.g.: "IndexDefinitionBuildersOfOrders"
index_definition.name = "OrdersByTotal"

# Define the put indexes operation, pass the index definition
# Note: multiple index definitions can be passed, see syntax below
put_indexes_op = PutIndexesOperation(index_definition)

# Execute the operation by passing it to Maintenance.Send
store.maintenance.send(put_indexes_op)
`}
</CodeBlock>
</TabItem>



## Syntax 

<TabItem value="syntax" label="syntax">
<CodeBlock language="python">
{`class PutIndexesOperation(MaintenanceOperation):
    def __init__(self, *indexes_to_add: IndexDefinition): ...
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| - |- | - |
| **\*indexes_to_add** | `IndexDefinition` | Definitions of indexes to deploy |

<a id="indexDefinition"/>

| `IndexDefinition` parameter| Type | Description |
| - |- | - |
| **name** | `str` | Name of the index, a unique identifier |
| **maps** | `Set[str]` | All the map functions for the index |
| **reduce** | `str` | The index reduce function |
| **deployment_mode** | `IndexDeploymentMode` | Deployment mode<br/>(PARALLEL, ROLLING) |
| **state** | `IndexState` | State of index<br/>(NORMAL, DISABLED, IDLE, ERROR) |
| **priority** | `IndexPriority` | Priority of index<br/>(LOW, NORMAL, HIGH) |
| **lock_mode** | `IndexLockMode` | Lock mode of index<br/>(UNLOCK, LOCKED_IGNORE, LOCKED_ERROR) |
| **fields** | `Dict[str, IndexFieldOptions]` | _IndexFieldOptions_ per index field |
| **additional_sources** | `Dict[str, str]` | Additional code files to be compiled with this index |
| **additional_assemblies** | `Set[AdditionalAssembly]` | Additional assemblies that are referenced |
| **configuration** | `IndexConfiguration` | Can override [indexing configuration](../../../../server/configuration/indexing-configuration.mdx) by setting this dictionary |
| **output_reduce_to_collection** | `str` | A collection name for saving the reduce results as documents |
| **reduce_output_index** | `int` | This number will be part of the reduce results documents IDs |
| **pattern_for_output_reduce_to_collection_references** | `str` | Pattern for documents IDs which reference IDs of reduce results documents |
| **pattern_references_collection_name** | `str` | A collection name for the reference documents created based on provided pattern |

| `store.maintenance.send(put_indexes_op)` return value | Description |
| - | - |
| `List[PutIndexResult]` | List of _PutIndexResult_ per index |

| `PutIndexResult` parameter | Type | Description |
| - | - | - |
| **index** | `str` | Name of the index that was added |
| **raft_command_index** | `int` | Index of raft command that was executed |




</LanguageContent>
<LanguageContent language="php">

<Admonition type="note" title="">

* There are a few ways to create and deploy indexes in a database.  

* This page describes deploying a **static-index** using the `PutIndexesOperation` Operation.  
  For a general description of Operations see [what are operations](../../../../client-api/operations/what-are-operations.mdx).  

* In this page:
    * [Ways to deploy indexes - short summary](../../../../client-api/operations/maintenance/indexes/put-indexes.mdx#ways-to-deploy-indexes---short-summary)
    * [Put indexes operation with IndexDefinition](../../../../client-api/operations/maintenance/indexes/put-indexes.mdx#put-indexes-operation-with-indexdefinition)
    * [Put indexes operation with IndexDefinitionBuilder](../../../../client-api/operations/maintenance/indexes/put-indexes.mdx#put-indexes-operation-with-indexdefinitionbuilder)
    * [Syntax](../../../../client-api/operations/maintenance/indexes/put-indexes.mdx#syntax)

</Admonition>
## Ways to deploy indexes - short summary 

#### Static index:

There are a few ways to deploy a static-index from the Client API:  

  * Call `execute()` on a specific index instance
  * Call `IndexCreation.create_indexes()` to deploy multiple indexes
  * Execute `PutIndexesOperation` maintenance operation on the Document Store - see below
  * Learn more in [static indexes](../../../../indexes/creating-and-deploying.mdx#static-indexes)

#### Auto index:  

  * An auto-index is created by the server when making a filtering query that doesn't specify which index to use
  * Learn more in [auto indexes](../../../../indexes/creating-and-deploying.mdx#auto-indexes)



## Put indexes operation with IndexDefinition 

Using `PutIndexesOperation` with **IndexDefinition** allows the following:  

  * Choosing any name for the index.
  * Setting low-level properties available in _IndexDefinition_.

<Tabs groupId='languageSyntax'>
<TabItem value="Index" label="Index">
<CodeBlock language="php">
{`// Create an index definition
$indexDefinition = new IndexDefinition();

// Name is mandatory, can use any string
$indexDefinition->setName("OrdersByTotal");

// Define the index Map functions, string format
// A single string for a map-index, multiple strings for a multi-map-index
$indexDefinition->setMaps([
    "// Define the collection that will be indexed:" .
    "from order in docs.Orders" .
    "   // Define the index-entry:" .
    "   select new" .
    "   {" .
    "     // Define the index-fields within each index-entry:" .
    "     Employee = order.Employee," .
    "     Company = order.Company," .
    "     Total = order.Lines.Sum(l => (l.Quantity * l.PricePerUnit) * (1 - l.Discount))" .
    "   }"
]);

// $indexDefinition->setReduce(...);

// Can provide other index definitions available on the IndexDefinition class
// Override the default values, e.g.:
$indexDefinition->setDeploymentMode(IndexDeploymentMode::rolling());
$indexDefinition->setPriority(IndexPriority::high());

$configuration = new IndexConfiguration();
$configuration->offsetSet("Indexing.IndexMissingFieldsAsNull", "true");
$indexDefinition->setConfiguration($configuration);

// See all available properties in syntax below

// Define the put indexes operation, pass the index definition
// Note: multiple index definitions can be passed, see syntax below
$putIndexesOp = new PutIndexesOperation($indexDefinition);

// Execute the operation by passing it to Maintenance.Send
$store->maintenance()->send($putIndexesOp);
`}
</CodeBlock>
</TabItem>
<TabItem value="JavaScript-index" label="JavaScript-index">
<CodeBlock language="php">
{`// Create an index definition
$indexDefinition = new IndexDefinition();

// Name is mandatory, can use any string
$indexDefinition->setName("OrdersByTotal");

// Define the index Map functions, string format
// A single string for a map-index, multiple strings for a multi-map-index
$indexDefinition->setMaps([
    "map('Orders', function(order) {" .
    "    return {" .
    "        Employee: order.Employee," .
    "                  Company: order.Company," .
    "                  Total: order.Lines.reduce(function(sum, l) {" .
    "            return sum + (l.Quantity * l.PricePerUnit) * (1 - l.Discount);" .
    "        }, 0)" .
    "    };" .
    "});"
]);

// $indexDefinition->setReduce(...);

// Can provide other index definitions available on the IndexDefinition class
// Override the default values, e.g.:

$indexDefinition->setDeploymentMode(IndexDeploymentMode::rolling());
$indexDefinition->setPriority(IndexPriority::high());

$configuration = new IndexConfiguration();
$configuration->offsetSet("Indexing.IndexMissingFieldsAsNull", "true");
$indexDefinition->setConfiguration($configuration);
// See all available properties in syntax below

// Define the put indexes operation, pass the index definition
// Note: multiple index definitions can be passed, see syntax below
$putIndexesOp = new PutIndexesOperation($indexDefinition);

// Execute the operation by passing it to Maintenance.Send
$store->maintenance()->send($putIndexesOp);
`}
</CodeBlock>
</TabItem>
</Tabs>



## Put indexes operation with IndexDefinitionBuilder 

* Using `PutIndexesOperation` with an IndexDefinition created from an **IndexDefinitionBuilder** 
  allows setting low-level properties available in _IndexDefinitionBuilder_.  

* Note that only map or map-reduce indexes can be generated by the _IndexDefinitionBuilder_.  
  To generate multi-map indexes, use the above _IndexDefinition_ option. 

<TabItem value="put_2" label="put_2">
<CodeBlock language="php">
{`// Create an index definition builder
$builder = new IndexDefinitionBuilder();
$builder->setMap(
    "// Define the collection that will be indexed:" .
    "      from order in docs.Orders" .
    "        // Define the index-entry:" .
    "        select new" .
    "        \{" .
    "            // Define the index-fields within each index-entry:" .
    "            Employee = order.Employee," .
    "            Company = order.Company," .
    "            Total = order.Lines.Sum(l => (l.Quantity * l.PricePerUnit) * (1 - l.Discount))" .
    "        \}        "
);

// Can provide other properties available on the IndexDefinitionBuilder class, e.g.:
$builder->setDeploymentMode(IndexDeploymentMode::rolling());
$builder->setPriority(IndexPriority::high());
// $builder->setReduce(...);

// Generate index definition from builder
// Pass the conventions, needed for building the Maps property
$indexDefinition = $builder->toIndexDefinition($store->getConventions());

// Optionally, set the index name, can use any string
// If not provided then default name from builder is used, e.g.: "IndexDefinitionBuildersOfOrders"
$indexDefinition->setName("OrdersByTotal");

// Define the put indexes operation, pass the index definition
// Note: multiple index definitions can be passed, see syntax below
$putIndexesOp = new PutIndexesOperation($indexDefinition);

// Execute the operation by passing it to maintenance.send
$store->maintenance()->send($putIndexesOp);
`}
</CodeBlock>
</TabItem>



## Syntax 

<TabItem value="syntax" label="syntax">
<CodeBlock language="php">
{`PutIndexesOperation(IndexDefinition|IndexDefinitionArray|array ...$indexToAdd)
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
| - |- | - |
| **$indexToAdd** | `IndexDefinition`<br/>`IndexDefinitionArray`<br/>`array`| Definitions of indexes to deploy |

<a id="indexDefinition"/>

| `IndexDefinition` parameter| Type | Description |
| - |- | - |
| **$name** | `?string` | Name of the index, a unique identifier |
| **$state** | `?IndexState` | State of index<br/>(NORMAL, DISABLED, IDLE, ERROR) |
| **$priority** | `?IndexPriority` | Priority of index<br/>(LOW, NORMAL, HIGH) |
| **$maps** | `?StringSet` | All the map functions for the index |
| **$reduce** | `?string` | The index reduce function |
| **$deploymentMode** | `?IndexDeploymentMode` | Deployment mode<br/>(`parallel`, `rolling`) |
| **$lockMode** | `?IndexLockMode` | Lock mode of index<br/>(`Unlock`, `LockedIgnore`, `LockedError`) |
| **$fields** | `?IndexFieldOptionsArray` | _IndexFieldOptions_ per index field |
| **$additionalSources** | `?AdditionalSourcesArray` | Additional code files to be compiled with this index |
| **$additionalAssemblies** | `?AdditionalAssemblySet` | Additional assemblies that are referenced |
| **$configuration** | `?IndexConfiguration` | Can override [indexing configuration](../../../../server/configuration/indexing-configuration.mdx) by setting this dictionary |
| **$outputReduceToCollection** | `?string` | A collection name for saving the reduce results as documents |
| **$reduceOutputIndex** | `?int` | This number will be part of the reduce results documents IDs |
| **$patternForOutputReduceToCollectionReferences** | `?string` | Pattern for documents IDs which reference IDs of reduce results documents |
| **$patternReferencesCollectionName** | `?string` | A collection name for the reference documents created based on provided pattern |
| **$sourceType** | `?IndexSourceType` | Index source type<br/>(`None`, `Documents`, `TimeSeries`, `Counters`) |
| **$type** | `?IndexType` | Index type<br/>(`None`, `AutoMap`, `AutoMapReduce`, `Map`, `MapReduce`, `Faulty`, `JavaScriptMap`, `JavaScriptMapReduce`) |




</LanguageContent>
<LanguageContent language="nodejs">

<Admonition type="note" title="">

* There are a few ways to create and deploy indexes in a database.  

* This page describes deploying a **static-index** using the `PutIndexesOperation` Operation.  
  For a general description of Operations see [what are operations](../../../../client-api/operations/what-are-operations.mdx).  

* In this page:
    * [Ways to deploy indexes - short summary](../../../../client-api/operations/maintenance/indexes/put-indexes.mdx#ways-to-deploy-indexes---short-summary)
    * [Put indexes operation with IndexDefinition](../../../../client-api/operations/maintenance/indexes/put-indexes.mdx#put-indexes-operation-with-indexdefinition)
    * [Syntax](../../../../client-api/operations/maintenance/indexes/put-indexes.mdx#syntax)

</Admonition>
## Ways to deploy indexes - short summary 

<Admonition type="note" title="">

##### Static-indexes:

There are a few ways to deploy a static-index from the Client API:

* The following methods are explained in section [Deploy a static-index](../../../../indexes/creating-and-deploying.mdx#deploy-a-static-index):
    * Call `execute()` on a specific index instance.
    * Call `executeIndex()` or `executeIndexes()` on your _DocumentStore_ object.
    * Call `IndexCreation.createIndexes()`.

* Alternatively, you can execute the `PutIndexesOperation` maintenance operation on the _DocumentStore_, **as explained below**.

</Admonition>
<Admonition type="note" title="">

##### Auto-indexes:

* An auto-index is created by the server when making a filtering query that doesn't specify which index to use.
  Learn more in [Creating auto indexes](../../../../indexes/creating-and-deploying.mdx#auto-indexes).

</Admonition>


## Put indexes operation with IndexDefinition 

Using `PutIndexesOperation` with **IndexDefinition** allows you to:

  * Choose any name for the index.  
    This string-based name is specified when querying the index.
  * Set low-level properties available in _IndexDefinition_.

<Tabs groupId='languageSyntax'>
<TabItem value="LINQ-index" label="LINQ-index">
<CodeBlock language="js">
{`// Create an index definition
const indexDefinition = new IndexDefinition();

// Name is mandatory, can use any string
indexDefinition.name = "OrdersByTotal";

// Define the index map functions, string format
// A single string for a map-index, multiple strings for a multi-map-index
indexDefinition.maps = new Set([\`
    // Define the collection that will be indexed:
    from order in docs.Orders

        // Define the index-entry:
        select new 
        {
            // Define the index-fields within each index-entry:
            Employee = order.Employee,
            Company = order.Company,
            Total = order.Lines.Sum(l => (l.Quantity * l.PricePerUnit) * (1 - l.Discount))
        }\`
]);

 // indexDefinition.reduce = ...

// Can provide other index definitions available on the IndexDefinition class
// Override the default values, e.g.:
indexDefinition.deploymentMode = "Rolling";
indexDefinition.priority = "High";
indexDefinition.configuration = {
    "Indexing.IndexMissingFieldsAsNull": "true"
};
// See all available properties in syntax below

// Define the put indexes operation, pass the index definition
// Note: multiple index definitions can be passed, see syntax below
const putIndexesOp = new PutIndexesOperation(indexDefinition);

// Execute the operation by passing it to maintenance.send
await documentStore.maintenance.send(putIndexesOp);
`}
</CodeBlock>
</TabItem>
<TabItem value="JavaScript-index" label="JavaScript-index">
<CodeBlock language="js">
{`// Create an index definition
const indexDefinition = new IndexDefinition();

// Name is mandatory, can use any string
indexDefinition.name = "OrdersByTotal";

// Define the index map functions, string format
// A single string for a map-index, multiple strings for a multi-map-index
indexDefinition.maps = new Set([\`
    map('Orders', function(order) {
        return {
            Employee: order.Employee,
            Company: order.Company,
            Total: order.Lines.reduce(function(sum, l) {
                return sum + (l.Quantity * l.PricePerUnit) * (1 - l.Discount);
            }, 0)
        };
    });\`
]);

// indexDefinition.reduce = ...

// Can provide other index definitions available on the IndexDefinition class
// Override the default values, e.g.:
indexDefinition.deploymentMode = "Rolling";
indexDefinition.priority = "High";
indexDefinition.configuration = {
    "Indexing.IndexMissingFieldsAsNull": "true"
};
// See all available properties in syntax below

// Define the put indexes operation, pass the index definition
// Note: multiple index definitions can be passed, see syntax below
const putIndexesOp = new PutIndexesOperation(indexDefinition);

// Execute the operation by passing it to maintenance.send
await documentStore.maintenance.send(putIndexesOp);
`}
</CodeBlock>
</TabItem>
</Tabs>



## Syntax 

<TabItem value="syntax" label="syntax">
<CodeBlock language="js">
{`const putIndexesOperation = new PutIndexesOperation(indexesToAdd);
`}
</CodeBlock>
</TabItem>

| Parameter        | Type                   | Description                      |
|------------------|------------------------|----------------------------------|
| **indexesToAdd** | `...IndexDefinition[]` | Definitions of indexes to deploy |

<a id="indexDefinition"/>

| `IndexDefinition` parameter                  | Type                     | Description                                                                                                                                 |
|----------------------------------------------|--------------------------|---------------------------------------------------------------------------------------------------------------------------------------------|
| name                                         | `string`                 | Name of the index, a unique identifier                                                                                                      |
| maps                                         | `Set<string>`            | All the map functions for the index                                                                                                         |
| reduce                                       | `string`                 | The index reduce function                                                                                                                   |
| deploymentMode                               | `object`                 | Deployment mode<br/>(Parallel, Rolling)                                                                                                      |
| state                                        | `object`                 | State of index<br/>(Normal, Disabled, Idle, Error)                                                                                           |
| priority                                     | `object`                 | Priority of index<br/>(Low, Normal, High)                                                                                                    |
| lockMode                                     | `object`                 | Lock mode of index<br/>(Unlock, LockedIgnore, LockedError)                                                                                   |
| fields                                       | `Record<string, object>` | _IndexFieldOptions_ per index field                                                                                                         |
| additionalSources                            | `Record<string, string>` | Additional code files to be compiled with this index                                                                                        |
| additionalAssemblies                         | `object[]`               | Additional assemblies that are referenced                                                                                                   |
| configuration                                | `object`                 | Can override [indexing configuration](../../../../server/configuration/indexing-configuration.mdx) by setting this Record&lt;string, string&gt; |
| outputReduceToCollection                     | `string`                 | A collection name for saving the reduce results as documents                                                                                |
| reduceOutputIndex                            | `number`                 | This number will be part of the reduce results documents IDs                                                                                |
| patternForOutputReduceToCollectionReferences | `string`                 | Pattern for documents IDs which reference IDs of reduce results documents                                                                   |
| patternReferencesCollectionName              | `string`                 | A collection name for the reference documents created based on provided pattern                                                             |

| `store.maintenance.send(putIndexesOp)` return value  | Description                |
|------------------------------------------------------|----------------------------|
| `object[]`                                           | operation result per index |

| Operation result per index  | Type     | Description                             |
|-----------------------------|----------|-----------------------------------------|
| index                       | `string` | Name of the index that was added        |
| raftCommandIndex            | `long`   | Index of raft command that was executed |




</LanguageContent>

<!---
### Indexes
- [What are Indexes](../../../../indexes/what-are-indexes)
- [Creating and Deploying Indexes](../../../../indexes/creating-and-deploying)
- [Index Administration](../../../../indexes/index-administration)

### Operations
- [What are operations](../../../../client-api/operations/what-are-operations)
- [How to Get Indexes](../../../../client-api/operations/maintenance/indexes/get-indexes)
- [How to Delete Index](../../../../client-api/operations/maintenance/indexes/delete-index)
- [How to Reset Index](../../../../client-api/operations/maintenance/indexes/reset-index)


-->